@@ -39,22 +39,6 @@ A list of all bugs open for the next v3.0.1 release can be found at
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
-  * SOCKS: Assertion/abort when starting TS with SOCKS proxy enabled
-    Trunk patch: http://svn.apache.org/viewvc?rev=1131080&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-818
-    +1: zwoop, ming_zym, ericb, jplevyak
-
-  * HTTP: We can end up caching responses which should not be cached,
-          when negative caching is enabled.
-    Trunk patch: http://svn.apache.org/viewvc?rev=1133066&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-825
-    +1: zwoop, ming_zym, ericb, jplevyak
-
-  * API: It's possible for a plugin to end up using free'd memory
-    Trunk patch: http://svn.apache.org/viewvc?rev=1133071&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-827
-    +1: zwoop, ericb, jplevyak
-
 
 RELEASE PROCESS
 
